[package]
name = "tokio-tracing-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.29"
tracing-subscriber = {version = "0.3.3", features = ["std", "env-filter"]}
tracing-opentelemetry = "0.16.0"
opentelemetry-jaeger = "0.15.0"
opentelemetry = "0.16"